--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -37,6 +37,20 @@
       </div>
     </nav>
 
+    {% with messages = get_flashed_messages(with_categories=True)%} {% if
+    messages %} {% for category , message in messages%} {% if category=="error"
+    %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{message}}
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
+      {{message}}
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+    {% endif %} {% endfor %} {% endif %} {%endwith%}
+
     <h1>Hello</h1>
     <div class="container">{% block content %}{% endblock %}</div>
     <script
