--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="\home">Blog</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,9 +28,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+            <a class="nav-link" href="/home">Home</a>
+            {%if user.is_authenticated %}
+            <a class="nav-link" href="/logout">Logout</a>
+            {%else%}
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/signup">Sign Up</a>
+            {%endif%}
             <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
           </div>
         </div>
@@ -51,7 +55,6 @@
     </div>
     {% endif %} {% endfor %} {% endif %} {%endwith%}
 
-    <h1>Hello</h1>
     <div class="container">{% block content %}{% endblock %}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
