--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,3 +1,1 @@
-{%extends "base.html"%} {% block title %}Home{% endblock %} {% block content %}
-<h1>welcome home</h1>
-{%endblock%}
+{%extends "posts.html"%} {% block title %}Home{% endblock %}
